# CEE690_SoftwareEng_Spring26

./: .gitignore  .test.py.swp  .vimrc  bashrc_custom  environment.yml  test.py
RDII/: Makefile  README.md  config.json  environment.yml  pyproject.toml
RDII/.github/workflows/: ci.yml
RDII/docs/source/: conf.py  index.rst  modules.rst
RDII/scripts/: pipeline.py  scrap.ipynb
RDII/scripts/preprocessing/: data_loader.py
RDII/src/rdii/: calculate_BWF.py  data_cleaner.py  data_loader.py  define_event.py  event_classify_cluster.py  event_classify_deterministic.py  event_stats.py  main.py  pipeline.py  plots.py  process_rain.py  remove_BWI.py  remove_GWI.py  utils.py
RDII/src/rdii/_archive/: event_classification.py  event_classification2.py
RDII/tests/: test_anomoly_detection.py  test_data_cleaner.py  test_data_loader.py  test_define_events.py  test_event_stats.py  test_remove_BWI.py
sunshine/: environment.yml
