[build-system]
requires=["setuptools>=61.0"]
build-backend= "setuptools.build_meta"


[project]
name = "rdii-analysis"
version = "0.1.0"
description = "RDII analysis for Durham sewer flow meters"
authors = [{name = "Grace Inman", email = "gi23@duke.edu"}]
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "prophet>=1.1.0",
    "holidays>=0.25",
    "joblib>=1.2.0",
]


[tool.setuptools.packages.find]
where = ["src"]
